[project]
name = "ecids_dbt_dagster_cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.14"
dependencies = [
    "dagster",
    "dagster-cloud",
    "dagster-dbt",
    "dbt-core<1.11"
    "dbt-snowflake<1.11",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "ecids_dbt_dagster_cloud.definitions"
code_location_name = "ecids_dbt_dagster_cloud"

